correct spelling mistakes

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header>
         <h1>Yee Ting Lau</h1>
     </header>
-    <img src="/images/20220922-IMG.jpg" alt="image of Yee Ting Lau" width="100px">
+    <img src="/images/20220922-IMG.jpg" alt="image of Yee Ting Lau" width="200px">
     <ul>
         <li>Student Number: 041053644</li>
         <li>Program: Interactive Media Design</li>
         <li>Course: MTM6201 Section 020 Web Development II</li>
-        <li>Interesting Fact: English nickname is common to use in my hometown Hong Kong; My nickname is Tracy.</li>
+        <li>Interesting Fact: English nickname is common to use in my hometown Hong Kong; my nickname is Tracy.</li>
     </ul>
 </body>
 </html>
