--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Yee Ting Lau</h1>
     </header>
-    <img src="/images/20220922-IMG.jpg" alt="image of Yee Ting Lau" width="200px">
+    <img src="/images/20220922.jpg" alt="image of Yee Ting Lau" width="200px">
     <ul>
         <li>Student Number: 041053644</li>
         <li>Program: Interactive Media Design</li>
